Fixed alignment and overflow issues on iPhone-size screens.

--- a/css/sources/index.less
+++ b/css/sources/index.less
@@ -87,6 +87,7 @@ header {
     margin-left: auto;
     margin-right: 7%;
     font-size: 120px;
+    @media (max-width: 560px) { font-size: 80px; }
     animation: slide-left 1.5s forwards;
   }
 }
@@ -101,14 +102,22 @@ header {
     margin-right: auto;
     margin-top: auto;
     height: 44%;
-    margin-left: -7%;
     font-size: 120px;
+    @media (max-width: 560px) {
+      height: 28%;
+      font-size: 80px;
+    }
+    margin-left: -7%;
     animation: slide-right 1.5s forwards;
   }
   p {
     align-self: flex-start;
     margin: auto auto 0 -5%;
     font-size: 20px;
+    @media (max-width: 560px) {
+      font-size: 18px;
+      margin: auto auto 0 0;
+    }
     animation: fade-in 1.5s;
   }
 }
@@ -217,6 +226,7 @@ main article {
   padding: 5px 20px;
   margin: 15px 0;
   @media (min-width: 1200px) { margin: 30px 0; }
+  @media (max-width: 560px) { font-size: 20px; }
   border-radius: 5px;
 }
 .contact-button:hover {
@@ -238,6 +248,7 @@ footer {
   }
   .footer-left {
     padding-right: 15px;
+    @media (max-width: 560px) { text-align: right; }
   }
   .footer-right {
     padding-left: 15px;
